# evolution-engine

./: .gitignore  .gitlab-ci.yml  .vercelignore  LICENSE  LICENSE-MIT  MANIFEST.in  QUICKSTART.md  README.md  action.yml  build_cython.py  demo.tape  demo_scripted.tape  evolution_engine-0.2.1-py3-none-any.whl  pyproject.toml  setup.py
.calibration/: BATCH_CALIBRATION_PLAN.md  CALIBRATION_SUMMARY.md  EXECUTIVE_SUMMARY.md  FILES_CREATED.txt  INDEX.md  MARKET_RESEARCH_2026-02-09.md  P3_REPO_SEARCH.md  PHASE3_DELIVERY_SUMMARY.md  README.md  REVIEW_CHECKLIST.md  SEARCH_AGENT_GUIDE.md  SESSION_TRANSITION_2026-02-09-B.md  SESSION_TRANSITION_2026-02-09-C.md  SESSION_TRANSITION_2026-02-09-D.md  SESSION_TRANSITION_2026-02-09.md  baseline_norms.json  calibration_log.md  fp_validation_report.json  launch_batches.sh  monitor.sh  quick_test_validation.sh  repo_validation.md  repos_found.json  run_calibration.py  run_fastapi.py  run_fastapi_no_llm.py  run_parallel.sh  run_targeted_calibration.py  search_agent.py  search_repos.sh  validate_all_candidates.sh  validate_repo.sh
.calibration/reports/: evolution-engine_calibration.md  fastapi_advisory.html  fastapi_calibration.md
.evo/: accepted.json
.github/workflows/: build-wheels.yml  deploy-vercel.yml  snapshot-patterns.yml  test-action.yml  test-diagnostics.yml  test.yml
action/: action.yml  evo-monitor.yml  format_comment.py
docs/: ADAPTER_CONTRACT.md  ARCHITECTURE_VISION.md  CALIBRATION_GUIDE.md  E2E_TEST_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_v1.md  INTEGRATIONS.md  LAUNCH_PLAN.md  P6_REPORT_GENERATOR.md  PHASE_2_DESIGN.md  PHASE_4_CONTRACT.md  PHASE_5_CONTRACT.md  PRE_RELEASE_AUDIT.md  PROJECT_VISION_AND_MILESTONES.md  README.md  SDLC_INTEGRATION_PLAN.md  axiom-alerts-dashboard.md  axiom-dashboards.md
docs/adapters/: BUILDING.md  LIFECYCLE.md  README.md  SECURITY.md  TRUST_TIERS.md
docs/archive/: ARCHITECTURE_v0.md  EXTERNAL_REVIEW_2026_02_06.md  Engine_Abstract_Base.htm  P1_GIT_HISTORY_WALKER.md  P6_REPORT_GENERATOR.md  PHASE_1_DESIGN.md  Phase_3_LLM_Role_Analysis.md  Phase_4_5_Architecture_Brainstorm.md
docs/contracts/: ADAPTER_CONTRACT.md  PHASE_2_CONTRACT.md  PHASE_3_CONTRACT.md
docs/design/: PHASE_3_DESIGN.md  PHASE_4_DESIGN.md  PHASE_5_DESIGN.md
docs/guides/: INTEGRATIONS.md
docs/legal/: ai-safety-audit.md  data-flow-audit.md  gdpr-deletion-runbook.md  privacy-policy-draft.md  terms-of-service-draft.md  third-party-api-tos-review.md
docs/marketing/: MARKETING_PLAN.md  SOCIAL_MEDIA_POSTS.md  VALUE_PROPOSITION.md
docs/research/: Engine_Abstract_Base.md
docs/tasks/: P3_REPO_SEARCH.md
evolution/: __init__.py  accepted.py  adapter_scaffold.py  adapter_security.py  adapter_validator.py  adapter_versions.py  cli.py  config.py  constants.py  fixer.py  format_comment.py  fp_validation.py  friendly.py  history.py  hooks.py  ingest.py  init.py  inline_suggestions.py  investigator.py  kb_export.py  kb_security.py  kb_sync.py  knowledge_store.py  license.py  llm_anthropic.py  llm_openrouter.py  notifications.py  orchestrator.py  pattern_registry.py  pattern_scaffold.py  pattern_validator.py  phase1_engine.py  phase1_ingest_git.py  phase2_engine.py  phase3_1_renderer.py  phase3_engine.py  phase4_engine.py  phase5_engine.py  pr_comment.py  prescan.py  (+7 more)
evolution/adapters/: __init__.py  git_adapter.py  github_client.py  gitlab_client.py
evolution/agent's reports/: 2026-02-08_AUTOMATED_SEARCH_AGENT.md  2026-02-08_Git_History_Walker_FINAL.md  2026-02-08_P3_REPO_SEARCH_IMPLEMENTATION.md  2026-02-08_P6_REPORT_GENERATOR_IMPLEMENTATION.md  2026-02-08_P6_UX_IMPROVEMENTS.md
evolution/agents/: __init__.py  anthropic_agent.py  base.py  cli_agent.py
evolution/data/: adapter_catalog.json  pattern_index.json  sdk_fingerprints.json  universal_patterns.json
evolution/i18n/: __init__.py  de.json  en.json  es.json
evolution/report/: __init__.py  __main__.py  filters.py  generator.py
examples/: analyze_fastapi_phase2.py  batch_calibrate.py  calibrate_repo.py  debug_phase3.py  fastapi_insights.py  rerun_phases2_5.py  run_e2e.py  run_fastapi_analysis.py  run_git_history_walker.py
examples/evo-adapter-jest-cov/: README.md  pyproject.toml
examples/evo-adapter-jest-cov/evo_jest_cov/: __init__.py
examples/evo-adapter-jest-cov/tests/: test_adapter.py
examples/evo-adapter-pytest-cov/: README.md  pyproject.toml
examples/evo-adapter-pytest-cov/evo_pytest_cov/: __init__.py
examples/evo-patterns-example/: README.md  pyproject.toml
examples/evo-patterns-example/evo_patterns_example/: __init__.py  patterns.json
examples/evo-patterns-example/tests/: test_patterns.py
legals/: data-flow-audit.md  lawyer-research.md  third-party-api-tos-review.md
scripts/: aggregate_calibration.py  capture-report-snapshots.py  demo.sh  demo.tape  demo_output.sh  gen_diagnostic_reports.py  generate_sample_reports.py  seed_registry.py  snapshot_to_pypi.py  test_renewal_e2e.py  test_stripe_sandbox.py
synthetic_wide/dir0/: file0.txt  file1.txt  file2.txt  file3.txt  file4.txt
synthetic_wide/dir1/: file0.txt  file1.txt  file2.txt  file3.txt  file4.txt
synthetic_wide/dir2/: file0.txt  file1.txt  file2.txt  file3.txt  file4.txt
synthetic_wide/dir3/: file0.txt  file1.txt  file2.txt  file3.txt  file4.txt
synthetic_wide/dir4/: file0.txt  file1.txt  file2.txt  file3.txt  file4.txt
tests/: conftest.py  test_4b_model_comparison.py  test_all_families.py  test_git_history_walker.py
tests/integration/: test_adapter_e2e.py  test_adapter_lifecycle_e2e.py  test_adapter_request.py  test_pipeline_e2e.py  test_stripe_flow.py
website/: adapters.html  docs.html  i18n.js  index.html  integrations.html  lawyer-review-packet-2026-02-22.html  privacy.html  report-aws-cdk.html  report-goose.html  report-onchainkit.html  report-plaid-node.html  report-substation.html  report-supabase.html  requirements.txt  robots.txt  sample-report-de.html  sample-report-es.html  sample-report-verify-de.html  sample-report-verify-es.html  sample-report-verify.html  sample-report.html  script.js  sitemap.xml  style.css  success.html  terms.html  vercel.json
(+107 files in other folders)
