[project]
name = "evolution-engine"
version = "0.1.0"
description = "Git-native codebase evolution indexer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Slava" }
]
keywords = ["git", "devops", "ci-cd", "code-quality", "evolution", "drift-detection", "codebase-analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = [
  "GitPython>=3.1",
  "click>=8.0",
  "requests>=2.25",
  "jinja2>=3.0",
]

[project.optional-dependencies]
llm = [
  "requests>=2.25",
]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "python-dotenv>=0.19",
]

[project.urls]
Homepage = "https://evo.dev"
Repository = "https://github.com/openclaw/evolution-engine"
"Bug Tracker" = "https://github.com/openclaw/evolution-engine/issues"

[project.scripts]
evo = "evolution.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
packages = ["evolution", "evolution.adapters", "evolution.adapters.git", "evolution.adapters.ci", "evolution.adapters.testing", "evolution.adapters.dependency", "evolution.adapters.config", "evolution.adapters.schema", "evolution.adapters.security", "evolution.adapters.deployment", "evolution.agents"]

[tool.setuptools.package-data]
evolution = ["data/*.json"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
