[project]
name = "evolution-engine"
version = "0.3.2"
description = "Git-native codebase evolution indexer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSL-1.1" }
authors = [
  { name = "Slava" }
]
keywords = ["git", "devops", "ci-cd", "code-quality", "evolution", "drift-detection", "codebase-analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]

dependencies = [
  "GitPython>=3.1,<4",
  "click>=8.0,<9",
  "requests>=2.25,<3",
  "jinja2>=3.0,<4",
]

[project.optional-dependencies]
llm = [
  "requests>=2.25,<3",
]
demo = [
  "playwright>=1.40,<3",
]
dev = [
  "pytest>=7.0,<9",
  "pytest-cov>=4.0,<6",
  "python-dotenv>=0.19,<2",
  "stripe>=7.0,<12",
  "build>=1.0,<2",
]

[project.urls]
Homepage = "https://codequal.dev"
Repository = "https://github.com/alpsla/evolution-engine"
"Bug Tracker" = "https://github.com/alpsla/evolution-engine/issues"

[project.scripts]
evo = "evolution.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools]
packages = ["evolution", "evolution.adapters", "evolution.adapters.git", "evolution.adapters.ci", "evolution.adapters.testing", "evolution.adapters.dependency", "evolution.adapters.config", "evolution.adapters.schema", "evolution.adapters.security", "evolution.adapters.deployment", "evolution.adapters.error_tracking", "evolution.agents", "evolution.i18n"]

[tool.setuptools.package-data]
evolution = ["data/*.json"]
"evolution.i18n" = ["*.json"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
