[project]
name = "evo-adapter-jest-cov"
version = "0.1.0"
description = "Evolution Engine adapter for Jest coverage reports"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []
authors = [{name = "CodeQual", email = "info@codequal.dev"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://codequal.dev"
Repository = "https://github.com/codequaldev/evolution-engine"
Documentation = "https://codequal.dev/docs"

[project.entry-points."evo.adapters"]
jest_cov = "evo_jest_cov:register"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
