[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "evo-adapter-pytest-cov"
version = "0.1.0"
description = "Evolution Engine adapter for pytest-cov coverage reports"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"

[project.entry-points."evo.adapters"]
evo-adapter-pytest-cov = "evo_pytest_cov:register"
