[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evo-patterns-example"
version = "0.1.0"
description = "Evolution Engine universal patterns — 27 cross-family patterns from 43 repos"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "CodeQual", email = "info@codequal.dev"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://codequal.dev"
Repository = "https://github.com/codequaldev/evolution-engine"
Documentation = "https://codequal.dev/docs"

[project.entry-points."evo.patterns"]
evo-patterns-example = "evo_patterns_example:register"

[tool.setuptools.package-data]
evo_patterns_example = ["patterns.json"]
